--- a/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
+++ b/src/app/modules/deceased-customer/deceased-cus/deceased-cus.component.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="mx-2">
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
-                            <input type="button" mat-raised-button color="primary"
+                            <input *ngIf="currentActivity.C" type="button" mat-raised-button color="primary"
                                    class=" mat-raised-button mat-button-base mat-primary searchLCBtn mt-2 bg-gray-500"
                                    value="Find" (click)="find()"
                                    [disabled]="viewOnly"/>
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="form-group kt-form__group row">
-                    <div class="col-lg-12 kt-margin-bottom-20-mobile mb-3 py-2" *ngIf="!viewOnly">
+                    <div class="col-lg-12 kt-margin-bottom-20-mobile mb-3 py-2" *ngIf="!viewOnly && currentActivity.C">
                         <span class="customMatLabel">Attach Scaned Death Certificate:</span>
                         <input formControlName="file" type="file" accept="image/jpg, image/jpeg"
                                (change)="onFileChange($event)"/>
@@ -201,7 +201,7 @@
                                     </mat-form-field>
                                 </td>
                                 <td>
-                                    <input type="button" mat-raised-button color="primary"
+                                    <input type="button" mat-raised-button color="primary" *ngIf="currentActivity.C"
                                            class="bg-green mat-raised-button mat-button-base mat-primary searchLCBtn"
                                            value="Mark as Deceased" (click)="MarkAsDeceasedCustomer()"
                                            [disabled]="viewOnly"/>
@@ -341,7 +341,7 @@
 
 
                                 <td style="cursor: pointer;">
-                                    <mat-icon class="text-green" (click)="viewDocument(img.ID)">remove_red_eye</mat-icon>
+                                    <mat-icon *ngIf="currentActivity.R" class="text-green" (click)="viewDocument(img.ID)">remove_red_eye</mat-icon>
 
                                 </td>
 
