--- a/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
+++ b/src/app/modules/loan/calculate-dbr/calculate-dbr.component.html
@@ -143,7 +143,7 @@
         </div>
         <div class="row">
             <div class="col-lg-12 mt-1p ml-1p mb-1p">
-                <button type="button" *ngIf="!isReadOnly" (click)="saveLoanDbr()" class="btn btn-primary bg-green" mat-raised-button
+                <button type="button" *ngIf="!isReadOnly && currentActivity.C" (click)="saveLoanDbr()" class="btn btn-primary bg-green" mat-raised-button
                         color="primary">
                     <mat-icon class="mr-2">save</mat-icon>
                     Save & Submit DBR
