--- a/src/app/modules/loan/cl-application-header/cl-application-header.component.html
+++ b/src/app/modules/loan/cl-application-header/cl-application-header.component.html
@@ -70,7 +70,7 @@
                 <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile mx-2" style="width: 225px;">
 
 
-                    <button [disabled]="checkDisable()" type="button" class="mt-2 btn btn-primary w-full"
+                    <button *ngIf="currentActivity.C" [disabled]="checkDisable()" type="button" class="mt-2 btn btn-primary w-full"
                             mat-raised-button color="primary" (click)="getLcNoAutoAssignedByApi()">
                         Check LC #
                     </button>
@@ -162,13 +162,13 @@
 <div class="form-group kt-form__group row pt-2 ml-0.5">
     <div class="col-lg-12 pl-1">
         <button style="background-color: #01671B;" [disabled]="isSaveApplicationHeaderInProgress" type="button"
-                class="btn btn-primary" mat-raised-button color="primary" (click)="onSaveApplicationHeader()">
+                class="btn btn-primary" mat-raised-button color="primary" *ngIf="currentActivity.C" (click)="onSaveApplicationHeader()">
             <mat-icon class="mr-2">save</mat-icon>
             Save
         </button>
         <button type="button"
                 class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                mat-raised-button color="danger" (click)="onClearSavApplicationHeader()">
+                mat-raised-button color="danger" *ngIf="currentActivity.C" (click)="onClearSavApplicationHeader()">
             <mat-icon class="mr-2"> clear_all</mat-icon>
             Clear
         </button>
