--- a/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
+++ b/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
@@ -209,7 +209,7 @@
                         </mat-form-field>
                     </div>
                     <div class="col-lg-4 kt-margin-bottom-20-mobile mb-2">
-                        <button type="button" class="btn btn-primary" mat-raised-button color="primary"
+                        <button *ngIf="currentActivity.C" type="button" class="btn btn-primary" mat-raised-button color="primary"
                                 (click)="AddCropDetail()">
                             <mat-icon class="mr-2">add_circle</mat-icon>
                             Add
@@ -286,12 +286,12 @@
 
                 <div class="form-group kt-form__group row">
                     <div class="col-lg-12 kt-margin-bottom-20-mobile">
-                        <button  type="button" class="btn btn-primary bg-red-500"
+                        <button *ngIf="currentActivity.D"  type="button" class="btn btn-primary bg-red-500"
                             mat-raised-button color="primary" (click)="deleteAppraisalItemDetail()">
                             <mat-icon class="mr-2">delete</mat-icon>
                             Delete
                         </button>
-                        <button type="button" class="btn btn-primary bg-green ml-3"
+                        <button *ngIf="currentActivity.C" type="button" class="btn btn-primary bg-green ml-3"
                                 mat-raised-button color="primary" (click)="AddAppraisalProposed()">
                             <mat-icon class="mr-2">save</mat-icon>
                             Save
