--- a/src/app/modules/loan/cl-customers/cl-customers.component.html
+++ b/src/app/modules/loan/cl-customers/cl-customers.component.html
@@ -50,11 +50,11 @@
                 </div>
                 <div class="col-lg-12  kt-margin-bottom-20-mobile flex">
                     <button class=" mb-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary"
-                            color="primary" (click)="attachCustomer()" type="button">
+                            color="primary" *ngIf="currentActivity.C" (click)="attachCustomer()" type="button">
                         <mat-icon class="mr-2">add</mat-icon>
                         Attach
                     </button>
-                    <a class=" mx-3 self-center cursor-pointer text-green" (click)="viewCustomer()">Search Customer </a>
+                    <a class=" mx-3 self-center cursor-pointer text-green" *ngIf="currentActivity.C" (click)="viewCustomer()">Search Customer </a>
                 </div>
 
 
@@ -94,7 +94,7 @@
                                 <td>
                                     {{returnKeyValuePair(customer.RelationID, 'relation')}}
                                 </td>
-                                <td style="cursor:pointer;" (click)="deleteRow(customer,i)">
+                                <td style="cursor:pointer;" *ngIf="currentActivity.D" (click)="deleteRow(customer,i)">
                                     <mat-icon class="text-red-500">
                                         delete
                                     </mat-icon>
@@ -108,7 +108,7 @@
             </div>
             <div class="form-group kt-form__group row">
                 <div class="col-lg-3 mt-1p">
-                    <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button
+                    <button style="background-color: #01671B;" *ngIf="currentActivity.C" type="button" class="btn btn-primary" mat-raised-button
                             color="primary" (click)="onSaveCustomer()">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
