--- a/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
+++ b/src/app/modules/loan/cl-legal-heirs/cl-legal-heirs.component.html
@@ -105,13 +105,13 @@
                 <div class="form-group kt-form__group row">
                     <div class="col-lg-12 mb-2">
                         <button type="button" class="btn btn-primary bg-green "
-                                mat-raised-button color="primary" (click)="onSaveLegalHeirsForm()">
+                                mat-raised-button color="primary" *ngIf="currentActivity.C" (click)="onSaveLegalHeirsForm()">
                             <mat-icon class="mr-2">save</mat-icon>
                             Save
                         </button>
                         <button type="button"
                                 class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                color="danger" (click)="onClearLegalHeirsForm()">
+                                color="danger" *ngIf="currentActivity.C" (click)="onClearLegalHeirsForm()">
                             <mat-icon class="mr-2"> clear_all</mat-icon>
                             Clear
                         </button>
@@ -142,7 +142,7 @@
                                     <td>{{legal.Dob}}</td>
                                     <td>{{legal.RelationName}}</td>
                                     <td>
-                                        <button type="button" class="btn btn-xs btn-primary"
+                                        <button type="button" *ngIf="currentActivity.D" class="btn btn-xs btn-primary"
                                                 (click)="onDeleteLegalHeirs(legal.ID,i)">Delete
                                         </button>
                                     </td>
