--- a/src/app/modules/loan/cl-purpose/cl-purpose.component.html
+++ b/src/app/modules/loan/cl-purpose/cl-purpose.component.html
@@ -9,7 +9,7 @@
                         <input matInput placeholder="Enter GL Code" formControlName="GlSubID" appNumberOnly/>
                         <mat-error *ngIf="hasError('GlSubID', 'required')">GL Code <strong>required</strong></mat-error>
                     </mat-form-field>
-                    <button type="button" (click)="GlschemeCropConfiguration()" class=" w-5/12 ml-1 btn btn-primary"
+                    <button *ngIf="currentActivity.C" type="button" (click)="GlschemeCropConfiguration()" class=" w-5/12 ml-1 btn btn-primary"
                             mat-raised-button color="primary">
                         Get GL Code #
                     </button>
@@ -162,13 +162,13 @@
             <div class="form-group kt-form__group row pb-2">
                 <div class="col-lg-12 mt-1p">
                     <button style="background-color: #01671B;" type="button" class="btn btn-primary" mat-raised-button
-                            color="primary" (click)="onSavePurpose()">
+                            color="primary" *ngIf="currentActivity.C" (click)="onSavePurpose()">
                         <mat-icon class="mr-2">save</mat-icon>
                         Save
                     </button>
                     <button type="button"
                             class="mat-focus-indicator  btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                            color="danger" (click)="onClearSavePurpose()">
+                            color="danger" *ngIf="currentActivity.C" (click)="onClearSavePurpose()">
                         <mat-icon class="mr-2"> clear_all</mat-icon>
                         Clear
                     </button>
@@ -211,8 +211,8 @@
                     <td>
 
 
-                        <mat-icon class="cursor-pointer text-green" (click)="onEditPurpose(loan)">edit</mat-icon>
-                      <mat-icon class="cursor-pointer text-red-500 ml-3" (click)="onDeletePurpose(loan,i)">delete</mat-icon>
+                        <mat-icon class="cursor-pointer text-green" *ngIf="currentActivity.U" (click)="onEditPurpose(loan)">edit</mat-icon>
+                      <mat-icon class="cursor-pointer text-red-500 ml-3" *ngIf="currentActivity.D" (click)="onDeletePurpose(loan,i)">delete</mat-icon>
 
               <!-- <span (click)="onEditPurpose(loan)"
                     style="cursor: pointer;
