--- a/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
+++ b/src/app/modules/loan/cl-upload-document/cl-upload-document.component.html
@@ -59,7 +59,7 @@
             </div>
             <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 mx-2" style="width: 225px;">
 
-                <input style="width: 50px;" type="button" mat-raised-button color="primary"
+                <input style="width: 50px;" type="button" mat-raised-button color="primary" *ngIf="currentActivity.C"
                        class=" mat-raised-button mat-button-base mat-primary searchLCBtn"
                        (click)="loanCase()" value="..."/>
                 </div>
@@ -205,6 +205,7 @@
         <div class="col-lg-12">
             <button style="background-color: #01671B;" type="button"
                     class="mat-focus-indicator mat-flat-button mat-button-base mat-primary"
+                    *ngIf="currentActivity.C"
                     (click)="saveLoanDocuments()">
                 <mat-icon class="mr-2">save</mat-icon>
                 Save
@@ -235,8 +236,8 @@
                     <td>{{loan.StatusName}}</td>
                     <td>{{loan.LoanType}}</td>
 
-                    <td style="cursor: pointer; color: #ecbd00;"><span
-                        (click)="viewDocument(1, loan.ImageID)">View</span> | <span
+                    <td style="cursor: pointer; color: #ecbd00;"><span *ngIf="currentActivity.R"
+                        (click)="viewDocument(1, loan.ImageID)">View</span> | <span currentActivity.D
                         (click)="deleteDocument(loan.ImageID)">Delete</span></td>
                 </tr>
                 </tbody>
