--- a/src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
+++ b/src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
@@ -151,7 +151,7 @@
             <ng-container matColumnDef="View">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>View</mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="primary">
+                    <button *ngIf="currentActivity.U" mat-icon-button color="primary">
                         <mat-icon style="margin-left: 5px" title="Edit row" (click)="editRefer(row)"
                         >edit
                         </mat-icon
@@ -163,7 +163,7 @@
             <ng-container matColumnDef="Submit">
                 <mat-header-cell *matHeaderCellDef mat-sort-header>Submit</mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                    <mat-checkbox (click)="getRow(row)"></mat-checkbox>
+                    <mat-checkbox *ngIf="currentActivity.U" (click)="getRow(row)"></mat-checkbox>
                 </mat-cell>
             </ng-container>
 
@@ -194,7 +194,7 @@
 
     </div>
 
-    <div *ngIf="allowSubmit" class="col-lg-12 text-center py-4 border-t px-4">
+    <div *ngIf="allowSubmit && currentActivity.U" class="col-lg-12 text-center py-4 border-t px-4">
         <button mat-raised-button class="mr-2" color="primary" (click)="SubmitData()">
             <mat-icon class="mr-2">check_circle</mat-icon>
             Submit
