--- a/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
+++ b/src/app/modules/land-creation/cust-land-information/cust-land-information.component.html
@@ -200,7 +200,7 @@
                         <mat-label class="customMatLabel">No of Customers: <strong class="matMandatory"></strong>
                         </mat-label>
                         <input [readonly]="isFormReadonly" matInput placeholder="Number Of Customer"
-                               formControlName="NumberOfCustomer" (keyup)="onKey($event)" maxlength="2"
+                               formControlName="NumberOfCustomer" (keyup)="onKey($event)" maxlength="2" min="1"
                                autocomplete="off"
                                appNumberOnly/>
                         <!--<mat-error *ngIf="hasError('FamilyNumber', 'required')">Family No <strong>required</strong></mat-error>-->
